Fix Bug 415254 - [regression] HTML viewer complains about "external references to images etc." when there are no images

FIXED-IN: 5.13.1
BUG: 415254